feat: update README.md to enhance installation and usage instructions, add troubleshooting section, and clarify Discord commands